--- a/app.ipynb
+++ b/app.ipynb
@@ -10,22 +10,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from keras.preprocessing.image import load_img, img_to_array\n",
-    "import tensorflow as tf"
+    "from keras.preprocessing.image import load_img, img_to_array, ImageDataGenerator\n",
+    "from keras.applications.resnet50 import preprocess_input\n",
+    "from keras.applications import resnet50\n",
+    "import tensorflow as tf\n",
+    "from PIL import Image, ImageEnhance"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from skimage.color import rgb2gray\n",
     "import pandas as pd\n",
+    "import numpy as np\n",
     "import os"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Objects"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img_data_gen_obj = ImageDataGenerator()"
    ]
   },
   {
@@ -141,6 +163,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Class for building methods pipeline."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
@@ -193,6 +223,39 @@
     "            print(ioe)\n",
     "            return res\n",
     "\n",
+    "    def normalised_pixel_values(self, image, value=250.0 ):\n",
+    "        '''normalise pixels values'''\n",
+    "        return image.astype(np.float32) / value\n",
+    "    \n",
+    "    \n",
+    "    def convert_image_grey_scale(self, image):\n",
+    "        '''receive an image and convert it to grey scale.'''\n",
+    "        return rgb2gray(image)\n",
+    "    \n",
+    "    def convert_image_grey_scale_array(self, image_array):\n",
+    "        '''receive an image array.\n",
+    "        normalise it values, before converting to grey scale.'''\n",
+    "        return rgb2gray( self.normalised_pixel_values(image_array))\n",
+    "    \n",
+    "    def enhance_image_contrast(self, image, factor = 1.5):\n",
+    "        '''enhance an images contrast. image must not be an array.'''\n",
+    "        # value of > 1, means increase contrast. \n",
+    "        # value < 1 decrease contrast. value 1, dont change contrast.\n",
+    "        return ImageEnhance.Contrast(image).enhance(factor)\n",
+    "    \n",
+    "    def norm_mean_substraction(self, image):\n",
+    "        '''apply means substraction on the image, image must be in shape of, bath, h, w, channels'''\n",
+    "        return preprocess_input(image)\n",
+    "    \n",
+    "    def save_image(sefl, image:Image):\n",
+    "        '''save an image.'''\n",
+    "        # image.save()\n",
+    "        \n",
+    "    def norm_z_score(self, image_array):\n",
+    "        '''perform z score on the image array'''\n",
+    "        return image_array / np.std(image_array) \n",
+    "    \n",
+    "        \n",
     "    def class_pipeline(self,):\n",
     "        '''pipe methods for image preprocessing.'''\n",
     "        pass\n",
@@ -201,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +274,7 @@
        "<PIL.Image.Image image mode=RGB size=250x250>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,6 +288,75 @@
     "# img_arr.shape\n",
     "# img_arr.reshape()\n",
     "image"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[-19.902605 -18.89002  -16.957148]\n",
+      "  [-19.902605 -18.89002  -16.957148]\n",
+      "  [-19.902605 -18.89002  -16.957148]\n",
+      "  ...\n",
+      "  [-19.87776  -18.815489 -16.596909]\n",
+      "  [-19.87776  -18.815489 -16.596909]\n",
+      "  [-19.890182 -18.803066 -16.609331]]\n",
+      "\n",
+      " [[-19.902605 -18.89002  -16.957148]\n",
+      "  [-19.902605 -18.89002  -16.957148]\n",
+      "  [-19.902605 -18.89002  -16.957148]\n",
+      "  ...\n",
+      "  [-19.87776  -18.815489 -16.596909]\n",
+      "  [-19.87776  -18.815489 -16.596909]\n",
+      "  [-19.890182 -18.803066 -16.609331]]\n",
+      "\n",
+      " [[-19.902605 -18.89002  -16.957148]\n",
+      "  [-19.902605 -18.89002  -16.957148]\n",
+      "  [-19.902605 -18.89002  -16.957148]\n",
+      "  ...\n",
+      "  [-19.87776  -18.803066 -16.584488]\n",
+      "  [-19.87776  -18.803066 -16.584488]\n",
+      "  [-19.87776  -18.790646 -16.596909]]\n",
+      "\n",
+      " ...\n",
+      "\n",
+      " [[-21.306297 -20.840284 -19.044052]\n",
+      "  [-21.616848 -21.150835 -19.354603]\n",
+      "  [-21.616848 -21.150835 -19.354603]\n",
+      "  ...\n",
+      "  [-21.517471 -21.06388  -18.994364]\n",
+      "  [-21.517471 -21.06388  -18.994364]\n",
+      "  [-21.529894 -21.06388  -18.994364]]\n",
+      "\n",
+      " [[-21.430517 -20.989347 -19.180695]\n",
+      "  [-21.33114  -20.889973 -19.081318]\n",
+      "  [-21.33114  -20.889973 -19.081318]\n",
+      "  ...\n",
+      "  [-21.554737 -21.138412 -19.068895]\n",
+      "  [-21.554737 -21.138412 -19.068895]\n",
+      "  [-21.579582 -21.125992 -19.068895]]\n",
+      "\n",
+      " [[-20.958479 -20.517311 -18.708656]\n",
+      "  [-20.511286 -20.070118 -18.261463]\n",
+      "  [-20.511286 -20.070118 -18.261463]\n",
+      "  ...\n",
+      "  [-21.554737 -21.138412 -19.068895]\n",
+      "  [-21.554737 -21.138412 -19.068895]\n",
+      "  [-21.554737 -21.138412 -19.068895]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# img_data_gen_obj.flow_from_directory(\"./data/faces/img_align_celeba/img_align_celeba/\")\n",
+    "# print(img_arr)\n",
+    "std = np.std(image)\n",
+    "i = img_arr / std\n",
+    "print( i )"
    ]
   },
   {
