--- a/app.ipynb
+++ b/app.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +149,7 @@
        "4  000005.jpg  236  109    120     166"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -172,17 +172,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
     "# class image for data data standardization\n",
     "# - data augmentation.\n",
     "# - data standardization.\n",
-    "class DataStandardoization():\n",
+    "class DataStandardization():\n",
     "    def __init__(self, image) -> None:\n",
     "        self.image = image\n",
-    "        \n",
+    "        self.image_size_x = 250\n",
+    "        self.image_size_y = 250\n",
+    "        self. root_path = \"./data/faces/img_align_celeba/img_align_celeba/\"\n",
+    "        self.data_gen = ImageDataGenerator(\n",
+    "            rotation_range=10,  # rotate images by 10 degrees\n",
+    "            width_shift_range=0.1,  # shift image horizontally 10%\n",
+    "            height_shift_range=0.1,  # shift image vertically 10%\n",
+    "            shear_range=0.2,  # apply shear transformations\n",
+    "            zoom_range=0.2,  # zoom images by up to 20%\n",
+    "            horizontal_flip=True,  # flip images horizontally\n",
+    "            fill_mode='nearest'  # Fill in newly created pixels after rotation or shifts\n",
+    "        )\n",
+    "    \n",
+    "    def load_image_data_gen(self, ):\n",
+    "        train_generator = self.data_gen.flow_from_directory(\n",
+    "            root_path,\n",
+    "            target_size=(self.image_size_y, self.image_size_x),\n",
+    "            batch_size=32,\n",
+    "            # os.path.join(root_path),\n",
+    "            # class_mode='binary'\n",
+    "        )\n",
+    "        return train_generator\n",
+    "    \n",
     "    def load_image(self, image_id):\n",
     "        '''load an image from file. receive the image path.'''\n",
     "        path = os.path.join(root_path, image_id)\n",
@@ -254,17 +276,15 @@
     "    def norm_z_score(self, image_array):\n",
     "        '''perform z score on the image array'''\n",
     "        return image_array / np.std(image_array) \n",
-    "    \n",
     "        \n",
     "    def class_pipeline(self,):\n",
     "        '''pipe methods for image preprocessing.'''\n",
-    "        pass\n",
-    "    "
+    "        pass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +294,7 @@
        "<PIL.Image.Image image mode=RGB size=250x250>"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,82 +309,6 @@
     "# img_arr.reshape()\n",
     "image"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 107,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[[-19.902605 -18.89002  -16.957148]\n",
-      "  [-19.902605 -18.89002  -16.957148]\n",
-      "  [-19.902605 -18.89002  -16.957148]\n",
-      "  ...\n",
-      "  [-19.87776  -18.815489 -16.596909]\n",
-      "  [-19.87776  -18.815489 -16.596909]\n",
-      "  [-19.890182 -18.803066 -16.609331]]\n",
-      "\n",
-      " [[-19.902605 -18.89002  -16.957148]\n",
-      "  [-19.902605 -18.89002  -16.957148]\n",
-      "  [-19.902605 -18.89002  -16.957148]\n",
-      "  ...\n",
-      "  [-19.87776  -18.815489 -16.596909]\n",
-      "  [-19.87776  -18.815489 -16.596909]\n",
-      "  [-19.890182 -18.803066 -16.609331]]\n",
-      "\n",
-      " [[-19.902605 -18.89002  -16.957148]\n",
-      "  [-19.902605 -18.89002  -16.957148]\n",
-      "  [-19.902605 -18.89002  -16.957148]\n",
-      "  ...\n",
-      "  [-19.87776  -18.803066 -16.584488]\n",
-      "  [-19.87776  -18.803066 -16.584488]\n",
-      "  [-19.87776  -18.790646 -16.596909]]\n",
-      "\n",
-      " ...\n",
-      "\n",
-      " [[-21.306297 -20.840284 -19.044052]\n",
-      "  [-21.616848 -21.150835 -19.354603]\n",
-      "  [-21.616848 -21.150835 -19.354603]\n",
-      "  ...\n",
-      "  [-21.517471 -21.06388  -18.994364]\n",
-      "  [-21.517471 -21.06388  -18.994364]\n",
-      "  [-21.529894 -21.06388  -18.994364]]\n",
-      "\n",
-      " [[-21.430517 -20.989347 -19.180695]\n",
-      "  [-21.33114  -20.889973 -19.081318]\n",
-      "  [-21.33114  -20.889973 -19.081318]\n",
-      "  ...\n",
-      "  [-21.554737 -21.138412 -19.068895]\n",
-      "  [-21.554737 -21.138412 -19.068895]\n",
-      "  [-21.579582 -21.125992 -19.068895]]\n",
-      "\n",
-      " [[-20.958479 -20.517311 -18.708656]\n",
-      "  [-20.511286 -20.070118 -18.261463]\n",
-      "  [-20.511286 -20.070118 -18.261463]\n",
-      "  ...\n",
-      "  [-21.554737 -21.138412 -19.068895]\n",
-      "  [-21.554737 -21.138412 -19.068895]\n",
-      "  [-21.554737 -21.138412 -19.068895]]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "# img_data_gen_obj.flow_from_directory(\"./data/faces/img_align_celeba/img_align_celeba/\")\n",
-    "# print(img_arr)\n",
-    "std = np.std(image)\n",
-    "i = img_arr / std\n",
-    "print( i )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
