--- a/app.ipynb
+++ b/app.ipynb
@@ -186,13 +186,14 @@
     "        self.image_size_y = 250\n",
     "        self. root_path = \"./data/faces/img_align_celeba/img_align_celeba/\"\n",
     "        self.data_gen = ImageDataGenerator(\n",
-    "            rotation_range=10,  # rotate images by 10 degrees\n",
-    "            width_shift_range=0.1,  # shift image horizontally 10%\n",
-    "            height_shift_range=0.1,  # shift image vertically 10%\n",
-    "            shear_range=0.2,  # apply shear transformations\n",
-    "            zoom_range=0.2,  # zoom images by up to 20%\n",
-    "            horizontal_flip=True,  # flip images horizontally\n",
-    "            fill_mode='nearest'  # Fill in newly created pixels after rotation or shifts\n",
+    "            # \n",
+    "            rotation_range=10,  # \n",
+    "            width_shift_range=0.1,  \n",
+    "            height_shift_range=0.1, \n",
+    "            shear_range=0.2,  \n",
+    "            zoom_range=0.2,  \n",
+    "            horizontal_flip=True, \n",
+    "            fill_mode='nearest'\n",
     "        )\n",
     "    \n",
     "    def load_image_data_gen(self, ):\n",
@@ -248,7 +249,6 @@
     "    def normalised_pixel_values(self, image, value=250.0 ):\n",
     "        '''normalise pixels values'''\n",
     "        return image.astype(np.float32) / value\n",
-    "    \n",
     "    \n",
     "    def convert_image_grey_scale(self, image):\n",
     "        '''receive an image and convert it to grey scale.'''\n",
